force-app/main/default/objects/Books__c/Books__c.object-meta.xml
<CustomObject>
    <label>Book</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Books Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>