force-app/main/default/objects/Books__c/fields/Book_Author__c.field-meta.xml
<CustomField>
    <fullName>Book_Author__c</fullName>
    <label>Book Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>