force-app/main/default/objects/Books__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <label>Book Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>