force-app/main/default/objects/Books__c/fields/Books_18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Books_18_Character_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Books 18 Character ID</label>
    <type>Text</type>
</CustomField>