force-app/main/default/objects/Books__c/fields/Date_Finished__c.field-meta.xml
<CustomField>
    <fullName>Date_Finished__c</fullName>
    <label>Date Finished</label>
    <type>Date</type>
</CustomField>