force-app/main/default/objects/Books__c/fields/Date_Started__c.field-meta.xml
<CustomField>
    <fullName>Date_Started__c</fullName>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>