force-app/main/default/objects/Books__c/fields/Pages__c.field-meta.xml
<CustomField>
    <fullName>Pages__c</fullName>
    <label>Pages</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>