force-app/main/default/objects/Books__c/fields/Percent_Read__c.field-meta.xml
<CustomField>
    <fullName>Percent_Read__c</fullName>
    <formula>Progress_Pages_Read__c /  Pages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Read</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>