force-app/main/default/objects/Books__c/fields/Progress_Pages_Read__c.field-meta.xml
<CustomField>
    <fullName>Progress_Pages_Read__c</fullName>
    <label>Progress - Pages Read</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>