force-app/main/default/objects/Books__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Want to Read</fullName>
                <default>true</default>
                <label>Want to Read</label>
            </value>
            <value>
                <fullName>Currently Reading</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Started, Not Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>