force-app/main/default/objects/Books__c/fields/Time_to_Read__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Read__c</fullName>
    <formula>Date_Finished__c -  Date_Started__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Read</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>