force-app/main/default/objects/Books__c/fields/Type_of_Book__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Book__c</fullName>
    <label>Type of Book</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paperback</fullName>
            </value>
            <value>
                <fullName>Hardback</fullName>
            </value>
            <value>
                <fullName>Kindle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>